fixed input field on search box alignment issue

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -649,6 +649,7 @@ coding snow - youtube
 .search-box input:focus{
     width: 240px;
     padding: 0 6px;
+    height: 10px;
 }
 
 .search-btn{
